Add new section for schools

--- a/news.html
+++ b/news.html
@@ -102,6 +102,9 @@
                     <li>
                         <a href="participar.html">Cómo Participar</a>
                     </li>
+                    <li>
+                        <a href="participantes.html">Escuelas</a>
+                    </li>
                 </ul>
             </nav>
         </div>
