--- a/participar.html
+++ b/participar.html
@@ -103,6 +103,9 @@
                     <li class="active">
                         <a href="participar.html">Cómo Participar</a>
                     </li>
+                    <li>
+                        <a href="participantes.html">Escuelas</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -137,10 +140,7 @@
                     tome contacto directamente con autoridades de la escuela.</p>
                 <br>
                 <br>
-                <p>Estas son las <b>escuelas participantes:</b> </p>
 
-                <br>
-                <br>
                 <!--<ul class="list icons list-unstyled">
                     <li> <i class="icon icon-check"></i> Últimas vacantes de inscripción 2013 disponibles 13/06/2013</li>
                 </ul> -->
@@ -156,105 +156,7 @@
             </div>
 
 
-            <div class="owl-carousel" data-plugin-options='{"items": 12, "singleItem": false, "autoPlay": true}'>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc1.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc2.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc3.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc4.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc5.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc6.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc7.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc8.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc9.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc10.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc11.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc12.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc13.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc14.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc15.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc16.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc17.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc18.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc19.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc20.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc21.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc22.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc23.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc24.png" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc25.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc26.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc27.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc28.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc29.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
-                    <img class="img-responsive" src="img/escuelas-logos/esc30.jpg" alt="" style=" padding-right: 8px; ">
-                </div>
-                <div>
 
-            </div>
-
-            </div>
         </div>
 
 
