--- a/galeria.html
+++ b/galeria.html
@@ -103,6 +103,10 @@
                         <li>
                             <a href="participar.html">Cómo Participar</a>
                         </li>
+                        <li>
+                            <a href="participantes.html">Escuelas</a>
+                        </li>
+
                     </ul>
                 </nav>
             </div>
