--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
             <img class="img-responsive" src="img/logos/fiat.jpg" alt="">
         </div>
         <div>
-            <img class="img-responsive" src="img/logos/itba.png" alt="">
+            <img class="img-responsive" src="img/logos/itba-logo.jpg" alt="">
         </div>
         <div>
             <img class="img-responsive" src="img/logos/halcon.jpg" alt="">
