--- a/index.html
+++ b/index.html
@@ -123,12 +123,11 @@
                 <img src="img/slides/slide.png" data-fullwidthcentering="on" alt="">
 
                 <div class="tp-caption main-label sft stb"
-                     data-x="500"
-                     data-y="50"
+                     data-x="20"
+                     data-y="25"
                      data-speed="300"
                      data-start="500"
-                     data-easing="easeOutExpo">CAMPEONATO ARGENTINO </br>
-                        DE AUTOS ECOLÓGICOS 2014
+                     data-easing="easeOutExpo" style="color: #ffffff;">CAMPEONATO ARGENTINO DE AUTOS ECOLÓGICOS 2014</br>
                 </div>
 
                 <!--<div class="tp-caption sft stb visible-lg"-->
@@ -138,18 +137,9 @@
                 <!--data-start="1000"-->
                 <!--data-easing="easeOutExpo"><img src="img/slides/slide-title-border.png" alt=""></div>-->
 
-                <div class="tp-caption main-label lfl stl"
-                     data-x="500"
-                     data-y="200"
-                     data-speed="300"
-                     data-start="1500"
-                     data-easing="easeOutExpo"
-                     style="font-size: 35px; color: black;">"El futuro se hace presente"
-                </div>
-
                 <div class="tp-caption bottom-label sft stb"
-                     data-x="50"
-                     data-y="380"
+                     data-x="420"
+                     data-y="580"
                      data-speed="500"
                      data-start="2000"
                      data-easing="easeOutExpo"
@@ -157,8 +147,8 @@
                 </div>
 
                 <div class="tp-caption sft stb"
-                     data-x="400"
-                     data-y="360"
+                     data-x="500"
+                     data-y="610"
                      data-speed="300"
                      data-start="2500"
                      data-easing="easeOutExpo"><a data-hash href="#explanation"
@@ -611,12 +601,12 @@
         <div>
             <img class="img-responsive" src="img/logos/davicom.jpg" alt="">
         </div>
-        <div>
+        <!-- <div>
             <img class="img-responsive" src="img/logos/deautos.jpg" alt="">
-        </div>
-        <div>
+        </div> -->
+       <!--  <div>
             <img class="img-responsive" src="img/logos/fiat.jpg" alt="">
-        </div>
+        </div> -->
         <div>
             <img class="img-responsive" src="img/logos/itba-logo.jpg" alt="">
         </div>
@@ -626,18 +616,14 @@
         <div>
             <img class="img-responsive" src="img/logos/lisso.jpg" alt="">
         </div>
-        <div>
-            <img class="img-responsive" src="img/logos/logo-aca.gif" alt="">
-        </div>
+       
         <!--<div>-->
             <!--<img class="img-responsive" src="img/logos/logo-fia.gif" alt="">-->
         <!--</div>-->
-        <div>
-            <img class="img-responsive" src="img/logos/fia.jpg" alt="">
-        </div>
-        <div>
+       
+       <!--  <div>
             <img class="img-responsive" src="img/logos/mercedes.jpg" alt="">
-        </div>
+        </div> -->
         <div>
             <img class="img-responsive" src="img/logos/power.jpg" alt="">
         </div>
