--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                     </li>
                     <li>
                         <a href="participantes.html">Escuelas</a>
+                    </li> 
+                    <li>
+                        <a href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </nav>
