--- a/index.html
+++ b/index.html
@@ -578,6 +578,11 @@
         <div>
             <img class="img-responsive" src="img/logos/bsasciudad.jpg" alt="">
         </div>
+
+        <div>
+            <img class="img-responsive" src="img/logos/aca.jpg" alt="">
+        </div>
+
         <div>
             <img class="img-responsive" src="img/logos/Ausa.jpg" alt="">
         </div>
@@ -629,10 +634,12 @@
         </div>
 
         <div>
-            <img class="img-responsive" src="img/logos/imperial.jpg" alt="">
+            <img class="img-responsive" src="img/logos/davicom.jpg" alt="">
         </div>
 
-
+        <div>
+            <img class="img-responsive" src="img/logos/imperial.jpg" alt="">
+        </div>
 
         <div>
             <img class="img-responsive" src="img/logos/tiempos.jpg" alt="">
