--- a/galeria.html
+++ b/galeria.html
@@ -106,6 +106,9 @@
                         <li>
                             <a href="participantes.html">Escuelas</a>
                         </li>
+                        <li>
+                        <a href="contacto.html">Contacto</a>
+                    </li>
 
                     </ul>
                 </nav>
@@ -150,17 +153,18 @@
                             </a>
                         </div>
                     </li>
-                    <li class="col-md-6 isotope-item websites">
+                      <li class="col-md-6 isotope-item logos">
                         <div class="portfolio-item img-thumbnail">
                             <a href="portfolio-single-project.html" class="thumb-info">
                                 <iframe class="youtube-player" type="text/html" width="640" height="385"
-                                        src="http://www.youtube.com/embed/nMeeBc8yfxM" frameborder="0"></iframe>
-										<span class="thumb-info-title">
-											<span class="thumb-info-inner">DesafoEco 2013</span>
-										</span>
+                                        src="http://www.youtube.com/embed/Sjqb87gZl-Q" frameborder="0"></iframe>
+                                        <span class="thumb-info-title">
+                                            <span class="thumb-info-inner">Previa 2012</span>
+                                        </span>
                             </a>
                         </div>
                     </li>
+                    
                     <li class="col-md-6 isotope-item brands">
                         <div class="portfolio-item img-thumbnail">
                             <a href="portfolio-single-project.html" class="thumb-info">
@@ -172,14 +176,28 @@
                             </a>
                         </div>
                     </li>
-                    <li class="col-md-6 isotope-item logos">
+                  
+                    <li class="col-md-6 isotope-item websites">
                         <div class="portfolio-item img-thumbnail">
                             <a href="portfolio-single-project.html" class="thumb-info">
                                 <iframe class="youtube-player" type="text/html" width="640" height="385"
-                                        src="http://www.youtube.com/embed/Sjqb87gZl-Q" frameborder="0"></iframe>
-										<span class="thumb-info-title">
-											<span class="thumb-info-inner">Previa 2012</span>
-										</span>
+                                        src="http://www.youtube.com/embed/nMeeBc8yfxM" frameborder="0"></iframe>
+                                        <span class="thumb-info-title">
+                                            <span class="thumb-info-inner">DesafoEco 2013</span>
+                                        </span>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="col-md-6 isotope-item websites">
+                        <div class="portfolio-item img-thumbnail">
+                            <a class="img-thumbnail lightbox pull-left thumb-info" data-toggle="modal" data-target="#modal-4">
+                                <img class="img-custom" width="640" height="385" src="img/galery/2012-BS-0.jpg">
+                                <span class="thumb-info-title" style="bottom: 2%; left: 0%;">
+                                    <span class="thumb-info-inner">ECO 2012 Buenos Aires</span>
+                                </span>
+                                <span class="zoom">
+                                    <i class="icon icon-16 icon-white-shadowed icon-search"></i>
+                                </span>
                             </a>
                         </div>
                     </li>
@@ -189,7 +207,7 @@
                             <a class="img-thumbnail lightbox pull-left thumb-info" data-toggle="modal" data-target="#modal-3">
                                 <img class="img-custom" width="640" height="385" src="img/galery/ECO-2013-SL.jpg">
                                 <span class="thumb-info-title" style="bottom: 2%; left: 0%;">
-								    <span class="thumb-info-inner">ECO 2013 San Luis - Tercera Carrera</span>
+								    <span class="thumb-info-inner">ECO 2013 San Luis</span>
 							    </span>
                                 <span class="zoom">
 									<i class="icon icon-16 icon-white-shadowed icon-search"></i>
@@ -202,7 +220,7 @@
                             <a class="img-thumbnail lightbox pull-left thumb-info" data-toggle="modal" data-target="#modal-2">
                                 <img class="img-custom" width="640" height="385" src="img/galery/ECO-2013-SI.jpg">
                                 <span class="thumb-info-title" style="bottom: 2%; left: 0%;">
-								    <span class="thumb-info-inner">ECO 2013 San Isidro - Segunda Carrera</span>
+								    <span class="thumb-info-inner">ECO 2013 San Isidro</span>
 							    </span>
                                 <span class="zoom">
 									<i class="icon icon-16 icon-white-shadowed icon-search"></i>
@@ -215,7 +233,7 @@
                             <a class="img-thumbnail lightbox pull-left thumb-info" data-toggle="modal" data-target="#modal-1">
                                 <img class="img-custom" width="640" height="385" src="img/galery/ECO-2013-BSAS.jpg">
                                 <span class="thumb-info-title" style="bottom: 2%; left: 0%;">
-								    <span class="thumb-info-inner">ECO 2013 Buenos Aires - Primera Carrera</span>
+								    <span class="thumb-info-inner">ECO 2013 Buenos Aires</span>
 							    </span>
                                 <span class="zoom">
 									<i class="icon icon-16 icon-white-shadowed icon-search"></i>
@@ -237,15 +255,16 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="modalLabel-1">ECO 2013 Buenos Aires - Primera Carrera</h4>
+                    <h4 class="modal-title" id="modalLabel-1">ECO 2013 Buenos Aires</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="owl-carousel" data-plugin-options='{"items": 5, "autoHeight": true}'>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-1.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-2.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-3.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-4.jpg"> </div>
+                    <div class="owl-carousel" data-plugin-options='{"items": 6, "autoHeight": true}'>
+                         <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-BS-0.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-BS-1.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-BS-2.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-BS-3.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-BS-4.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-BS-5.jpg"> </div>
                     </div>
                 </div>
             </div>
@@ -256,15 +275,17 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="modalLabel-2">ECO 2013 San Isidro - Segunda Carrera</h4>
+                    <h4 class="modal-title" id="modalLabel-2">ECO 2013 San Isidro</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="owl-carousel" data-plugin-options='{"items": 5, "autoHeight": true}'>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SI.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SI-1.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SI-2.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SI-3.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SI-4.jpg"> </div>
+                    <div class="owl-carousel" data-plugin-options='{"items": 7, "autoHeight": true}'>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SI-0.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SI-1.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SI-2.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SI-3.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SI-4.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SI-5.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SI-6.jpg"> </div>
                     </div>
                 </div>
             </div>
@@ -275,15 +296,38 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="modalLabel-3">ECO 2013 San Luis - Tercera Carrera</h4>
+                    <h4 class="modal-title" id="modalLabel-3">ECO 2013 San Luis</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="owl-carousel" data-plugin-options='{"items": 5, "autoHeight": true}'>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SL.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SL-1.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SL-2.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SL-3.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SL-4.jpg"> </div>
+                    <div class="owl-carousel" data-plugin-options='{"items": 7, "autoHeight": true}'>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SL-0.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SL-1.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SL-2.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SL-3.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SL-4.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SL-5.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2013-SL-6.jpg"> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-4" tabindex="-1" role="dialog" aria-labelledby="modalLabel-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="modalLabel-1">ECO 2012 Buenos Aires</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="owl-carousel" data-plugin-options='{"items": 7, "autoHeight": false}'>
+                         <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2012-BS-0.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2012-BS-1.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2012-BS-2.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2012-BS-3.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2012-BS-4.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2012-BS-5.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/2012-BS-6.jpg"> </div>
                     </div>
                 </div>
             </div>
