--- a/news.html
+++ b/news.html
@@ -105,6 +105,9 @@
                     <li>
                         <a href="participantes.html">Escuelas</a>
                     </li>
+                    <li>
+                        <a href="contacto.html">Contacto</a>
+                    </li>
                 </ul>
             </nav>
         </div>
