--- a/underConstruction.html
+++ b/underConstruction.html
@@ -30,7 +30,7 @@
 		<link rel="stylesheet" href="css/theme-animate.css">
 
 		<!-- Skin CSS -->
-		<link rel="stylesheet" href="css/skins/blue.css">
+		<link rel="stylesheet" href="css/skins/green.css">
 
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/custom.css">
@@ -78,7 +78,7 @@
                         </div>
                         <nav class="nav-main">
                             <ul class="nav nav-pills nav-main" id="mainMenu">
-                                <li class="active">
+                                <li>
                                     <a class="dropdown-toggle" href="index.html">
                                         Principal
                                     </a>
@@ -97,6 +97,21 @@
                                 </li>
                                 <li>
                                     <a href="participantes.html">Escuelas</a>
+                                </li>
+
+                                <li class="dropdown active">
+                                    <a class="dropdown-toggle" href="#">
+                                        Carreras
+                                        <i class="icon icon-angle-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu active">
+                                        <li><a href="underConstruction.html">Resultados</a></li>
+                                        <li><a href="underConstruction.html">Webcams en pista</a></li>
+                                    </ul>
+                                </li>
+
+                                <li>
+                                    <a href="contacto.html">Contacto</a>
                                 </li>
                             </ul>
                         </nav>
