--- a/galeria.html
+++ b/galeria.html
@@ -106,9 +106,20 @@
                         <li>
                             <a href="participantes.html">Escuelas</a>
                         </li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" href="#">
+                                Carreras
+                                <i class="icon icon-angle-down"></i>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="underConstruction.html">Resultados</a></li>
+                                <li><a href="underConstruction.html">Webcams en pista</a></li>
+                            </ul>
+                        </li>
+
                         <li>
-                        <a href="contacto.html">Contacto</a>
-                    </li>
+                            <a href="contacto.html">Contacto</a>
+                        </li>
 
                     </ul>
                 </nav>
