--- a/underConstruction.html
+++ b/underConstruction.html
@@ -138,14 +138,14 @@
 						<div class="row">
 							<div class="col-md-6 col-md-offset-1">
 								<div class="page-not-found-main">
-									<h1>En construcción</h1>
+									<h1></h1>
                                     <img src="img/construccion.png" style="width: 251px;
 margin-top: -40px;">
 									<p>Próximamente esta sección se encontrará disponible.</p>
 								</div>
 							</div>
 							<div class="col-md-4">
-								<h4>Conoce todas las secciones de nuestra web</h4>
+								<h4>Visitá otras secciones de nuestra web</h4>
 								<ul class="nav nav-list primary">
 									<li><a href="index.html">Principal</a></li>
 									<li><a href="galeria.html">Galería</a></li>
