adds reglamentos to header

--- a/galeria.html
+++ b/galeria.html
@@ -106,6 +106,17 @@
                         <li>
                             <a href="participantes.html">Escuelas</a>
                         </li>
+
+                         <li class="dropdown">
+                        <a class="dropdown-toggle" href="#">
+                            Reglamentos
+                            <i class="icon icon-angle-down"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="doc/reglamento.pdf"  target="_blank">Reglamento deportivo</a></li>
+                            <li><a href="doc/reglamento_tecnico.pdf"  target="_blank">Reglamento técnico</a></li>
+                        </ul>
+                    </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" href="#">
                                 Carreras
