--- a/index.html
+++ b/index.html
@@ -106,7 +106,16 @@
                     <li>
                         <a href="participantes.html">Escuelas</a>
                     </li>
-
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" href="#">
+                            Reglamentos
+                            <i class="icon icon-angle-down"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="doc/reglamento.pdf"  target="_blank">Reglamento deportivo</a></li>
+                            <li><a href="doc/reglamento_tecnico.pdf"  target="_blank">Reglamento técnico</a></li>
+                        </ul>
+                    </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" href="#">
                             Carreras
@@ -300,7 +309,7 @@
 <section class="highlight top center">
 <div class="container">
 
-    <h2 style="width: 90%; float: left; margin-bottom: 20px;">Contactate con el ITBA para resolver tus dudas tecnicas:</h2>
+    <h2 style="width: 90%; float: left; margin-bottom: 20px;">Contactate con el ITBA para resolver tus dudas técnicas:</h2>
     <a  href="underConstruction.html"
         class="btn btn-primary center" style="background-color:#0099e6"> Asesoramiento técnico<br/>
         <img class="center" src="img/logo-itba.png" alt="" style="width: 230px;">
