--- a/participantes.html
+++ b/participantes.html
@@ -105,6 +105,16 @@
                     <li class="active">
                         <a href="participantes.html">Escuelas</a>
                     </li>
+                     <li class="dropdown">
+                        <a class="dropdown-toggle" href="#">
+                            Reglamentos
+                            <i class="icon icon-angle-down"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="doc/reglamento.pdf"  target="_blank">Reglamento deportivo</a></li>
+                            <li><a href="doc/reglamento_tecnico.pdf"  target="_blank">Reglamento técnico</a></li>
+                        </ul>
+                    </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" href="#">
                             Carreras
@@ -259,7 +269,7 @@
                 <li class="col-md-4 isotope-item websites">
                     <ul class="list icons list-unstyled">
 
-                        <li><i class="icon icon-check"></i> Colegio Técnico N°7 Juana Korslay - San Luis</li>
+                        <li><i class="icon icon-check"></i> Colegio Técnico N°37 Juana Koslay - San Luis</li>
                         <li><i class="icon icon-check"></i> Instituto Nuestra Señora de Fatima</li>
                         <li><i class="icon icon-check"></i> Escuela Técnica N°29 Reconquista de Buenos Aires</li>
                         <li><i class="icon icon-check"></i> Colegio N°15 Ing. Agustín Mercau - San Luis</li>
