--- a/videos.html
+++ b/videos.html
@@ -107,6 +107,16 @@
                         <a href="participar.html">Cómo Participar</a>
                     </li>
 
+ <li class="dropdown">
+                        <a class="dropdown-toggle" href="#">
+                            Reglamentos
+                            <i class="icon icon-angle-down"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="doc/reglamento.pdf"  target="_blank">Reglamento deportivo</a></li>
+                            <li><a href="doc/reglamento_tecnico.pdf"  target="_blank">Reglamento técnico</a></li>
+                        </ul>
+                    </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" href="#">
                             Carreras
