mas cambios pedidos

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                 <div class="tp-caption bottom-label sft stb"
                      data-x="420"
-                     data-y="580"
+                     data-y="500"
                      data-speed="500"
                      data-start="2000"
                      data-easing="easeOutExpo"
@@ -172,7 +172,7 @@
 
                 <div class="tp-caption sft stb"
                      data-x="500"
-                     data-y="610"
+                     data-y="530"
                      data-speed="300"
                      data-start="2500"
                      data-easing="easeOutExpo"><a data-hash href="#explanation"
@@ -215,7 +215,7 @@
 </div>
 
 
-<section class="highlight top">
+<!-- <section class="highlight top">
 <div class="container">
     <h2 style="width: 70%; float: left; margin-bottom: 0;"> Plazas y fechas en proceso de confirmación</h2>
 
@@ -228,7 +228,7 @@
        style="background-color: #0099e6; padding: 10px 10px 10px 10px;">Reglamento técnico</a>
 
 </div>
-</section>
+</section> -->
 
 <div class="row center">
     <div class="owl-carousel" data-plugin-options='{"items": 6, "singleItem": false, "autoPlay": true}'>
