--- a/participantes.html
+++ b/participantes.html
@@ -154,7 +154,7 @@
             <div class="col-md-12">
                 <h2 class="short word-rotator-title">
                     Estas son las <strong> escuelas participantes </strong>
-                    de Desafío Eco
+                    en las ediciones <strong> 2012 </strong>y <strong>2013</strong> 
                 </h2>
                 <h4 class="lead tall"> 31 escuelas de todo el país</h4>
             </div>
