--- a/participar.html
+++ b/participar.html
@@ -253,15 +253,9 @@
 
 <section class="highlight top">
     <div class="container">
-        <h2 style="width: 70%; float: left; margin-bottom: 0;">Plazas y fechas en proceso de confirmación</h2>
+        <h2 style="width: 70%; float: center; margin-bottom: 0;margin-left: 25%; margin-right: 50%;">Plazas y fechas en proceso de confirmación</h2>
 
-        <a  href="doc/reglamento.pdf"  target="_blank"
-       class="btn btn-primary"
-       style="background-color: #0099e6; padding: 10px 10px 10px 10px;">Reglamento deportivo</a>
-
-        <a  href="doc/reglamento_tecnico.pdf"  target="_blank"
-       class="btn btn-primary"
-       style="background-color: #0099e6; padding: 10px 10px 10px 10px;">Reglamento técnico</a>
+      
     </div>
 </section>
 
